delete unnecessary repositories